--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -4,7 +4,7 @@
 
 // // 颜色
 
-// $bannerTextColor = #fff // 首页banner区(博客标题)文本颜色
+$bannerTextColor = #c83 // 首页banner区(博客标题)文本颜色
 // $accentColor = #11A8CD // 主题色
 // $activeColor = #ff5722
 // $arrowBgColor = #ccc
